@@ -1,0 +1,23 @@
+[NAME]
+imports files from dphys-config managed remote host
+
+[SEE ALSO]
+dphys-config(1)
+
+[COPYRIGHT]
+Copyright (C) 2011 Axel Beckert <abe@debian.org>
+
+This script is free software; you can redistribute it and/or modify it
+under the terms of the GNU General Public License as published by the
+Free Software Foundation; either version 2 of the License, or (at your
+option) any later version.
+
+This script is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this package; if not, write to the Free Software
+aFoundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
+USA
