@@ -1,6 +1,7 @@
 dphys-config (20100216-2) UNRELEASED; urgency=low
 
   * Add new script reverse-dphys-config
+    + build-depend on help2man for its manpage
   * debian/rules: replace mkdir + cp by install -D
   * debian/copyright:
     + Remove obsolete copyright of findcdroms.c (no more included upstream
